v1004 submit button adjustment

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           ></textarea
           ><br />
           <label for="submit"></label><br />
-          <input type="submit" value="submit" id="submit" />
+          <input type="submit" value="SUBMIT" id="submit" />
         </form>
       </section>
     </main>
